# smol-but-mighty

./: LICENSE  README.md
code/gguf-model-api/: README.md  main.py  pyproject.toml
docs/: README.md
notebooks/: 01_sentiment_classification.ipynb  02_function_calling.ipynb  03_gguf_conversion.ipynb
